# Python-w-zast.-naukowych

./: pyproject.toml
lab/lab01/: program1.py  tensor.py
lab/lab02/: klasy.py  program2.py
lab/lab03/: program3.py
lab/lab03/data/: output.json
lab/lab04/: program4.py
lab/lab04/data/: out  output.json  output.json2
lab/lab05/: program5.py
lab/lab05/.ipynb_checkpoints/: test-checkpoint.ipynb  wykresy-checkpoint.ipynb
lab/lab05/data/: data.json
lab/lab06/: program6.py
lab/lab07/: gol.ipynb  ising_numba.py  ising_numpy.py
lab/lab08/: program8_a.py  program8_b.py
lab/lab09/: program9.py
lab/lab09/data/: links.txt
lab/lab09/pixaby_download/: download_async.py  pixabay_ids.txt  pixabay_urls.txt
lab/lab11/: program11.ipynb
lab/tensor/: tensor_flow.py
