[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
keras = "^2.6.0"
tensorflow = "^2.6.0"
tf-nightly-gpu = "^2.8.0-alpha.20211016"
ascii_graph = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
